[package]
name = "juz"
version = "0.1.0"
authors = ["Yasushi Sakai <yasushisakai+git@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = {version="0.4.19", features=["serde"]}
env_logger = "0.8.3"
log = "0.4.14"
serde = "1.0.125"
serde_json = "1.0.64"
sha2 = "0.9.3"
uuid = {version="0.8.2", "features"=["serde", "v4"]}
